src/main/resources/static/shiba.css
.page-wrapper .grid {
    max-width: 750px;
}

.page-wrapper {
    flex: 1 0 auto;
}

#landing-page .grid {
    max-width: 960px;
}

.bullet-points div {
    margin-bottom: 10px;
}

.intro-section {
    max-width: 35rem;
}

.boxed-content {
    padding: 2.5rem 1rem 2.5rem 1rem;
    margin: 2.5rem auto;
    border: 2px solid #AAAAAA;
    border-radius: 3px;
}

.builder-list {
    padding-right: 2.5rem;
}

.list-header {
    padding-left: 2.5rem;
}

.intro-box__title {
    margin-bottom: 20px;
}

.dob-input {
    display: inline-block;
    width: calc(30% - 3rem);
}

.bottom-horizontal-line {
    border-bottom: 1px solid black;
}

.bottom-horizontal-line-grey {
    border-bottom: 1px solid #CFC5BF;
}

.icon-check_circle.large {
    color: #CFC5BF;
    font-size: 100px;
}

.form-width--2-character {
    width: calc(4.4rem + 2ch);
    padding: 0 2rem;
}

.form-width--4-character {
    width: calc(4.4rem + 4ch);
    padding: 0 2rem;
}

.slab--shiba {
    background-color: #E9F6FF;
}

.slab--minnesota-sky-blue {
    background-color: rgba(155, 203, 235, 0.25);
}

.footer-minnesota-blue {
    color: #FFF;
    background-color: #003865;
}

.button--minnesota-blue {
    color: #FFFFFF;
    background-color: #003865;
    border-color: #003865;
    box-shadow: 0 2px 0 #00088E;
}

.button--minnesota-blue:hover {
    border-color: #00223D;
    background-color: #00223D;
    color: #FFFFFF;
}

.minnesota-blue {
    color: #003865;
}

.font-white {
    color: white;
}

@media screen and (min-width: 601px) {
    .card {
        margin-bottom: 6rem;
        padding: 6rem 16rem;
    }
}

.main-footer {
    position: relative;
    height: auto !important;
    flex-shrink: 0;
}

body {
    display: flex;
    flex-direction: column;
    margin-bottom: unset;
    height: 100%;
}

html {
    height: 100%;
}

.textarea-readonly {
    font-weight: normal;
    font-size: 14px;
    border: none;
    box-shadow: none;
    overflow-wrap: break-word;
    border-radius: 6px;
    width: 100%;
    padding: 1.5rem;
    line-height: 2.5rem;
    margin-bottom: 1.5rem;
    background-color: #F7F5F4;
}

.legal-stuff-window {
    height: 35rem;
    overflow-y: scroll;
    padding-right: calc(1.5rem + 12px);
}

.legal-stuff-window div {
    margin-bottom: 10px;
    line-height: 1.5;
}

.legal-stuff-window h3 {
    margin-bottom: 10px;
}

.textarea-readonly::-webkit-scrollbar {
    -webkit-appearance: none;
}

.textarea-readonly::-webkit-scrollbar:vertical {
    width: 12px;
}

.textarea-readonly::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, .2);
    border-radius: 10px;
    border: 2px solid #ffffff;
}

.textarea-readonly::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
}

.main-footer {
    font-weight: normal;
}

.hide-radio-circle {
    -webkit-appearance: none !important;
    -moz-appearance: none !important;
    -ms-appearance: none !important;
    -o-appearance: none !important;
    appearance: none !important;
    display: none !important;
}

.inline {
    display: inline-block;
    width: 100%;
}

.right {
    float: right;
}

.review-info-section {
    border-color: #CFC5BF;
    padding-bottom: 2.5rem;
}

.italic {
    font-style: italic;
}

.incrementer {
    display: inline-block;
    margin-bottom: 0;
}

.incrementer > * {
    display: inline-block;
}

.incrementer__add, .incrementer__subtract:first-of-type {
    margin-left: 1.25rem;
    margin-right: 0;
    margin-bottom: 0;
}

.incrementer .text-input {
    display: inline-block;
}

.padding-horizontal-30 {
    padding-left: 3rem;
    padding-right: 3rem;
}

.padding-right-25 {
    padding-right: 2.5rem;
}

.padding-right-10 {
    padding-right: 1rem;
}

.vertical-button-group .button {
    margin-left: 0;
}

.reveal-adjacent {
    border: 2px solid #034E46;
    border-radius: 10px;
}

.reveal__link__header-adjacent {
    display: inline-block;
    padding: .3em .5em .3em .7em;
}

.reveal__link-adjacent {
    width: 100%;
    padding: unset;
    border: unset;
}

.reveal__link-adjacent:after {
    position: absolute;
    top: 0.7rem;
    right: 1rem;
}

.is-hidden .reveal__link-adjacent {
    border-radius: inherit;
}

/*noinspection CssReplaceWithShorthandSafely*/
.reveal__content-adjacent {
    margin-top: 0;
    border: unset;
    border-top-left-radius: unset;
    border-top-right-radius: unset;
    border-top: 2px solid #034E46;
    background-color: #EBFFFA;
    color: #034E46;
}

.job-context-employer-name {
    color: #5F5854;
    border-bottom: 2px solid #AAAAAA;
    padding-bottom: 0.5rem;
}

.splash {
    max-width: none;
    margin-top: 74px;
}

.illustration--cfa-logo {
    background-image: url(/images/code-for-america-logo_white.svg);
    margin-left: 0;
    background-size: 126px 84px;
}

.mn-logo {
    width: 50%;
}

.capitalized {
    text-transform: capitalize;
}

.footer__privacy-policy-link:hover {
    color: rgb(230, 242, 250);
}

.no-button {
    margin-left: 0;
    margin-right: 0;
}

.feedback-buttons-group {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.feedback-buttons {
    margin-right: 0.5rem;
    cursor: pointer;
    width: 10rem;
    text-align: center;
    border: 1px solid #5F5854;
    border-radius: 4px;
    height: 10rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    box-sizing: border-box;
}

.feedback-buttons i {
    font-size: 5rem;
}

.textarea {
    resize: none;
}

input:checked + .feedback-buttons {
    border: 2px solid #000000;
}

input[id='happy']:checked + .feedback-buttons {
    background-color: rgba(143, 228, 37, 0.5);
}

input[id='meh']:checked + .feedback-buttons {
    background-color: rgba(255, 200, 69, 0.5);
}

input[id='sad']:checked + .feedback-buttons {
    background-color: #F8C7B5;
}

.text--green {
    font-weight: 700;
    font-size: 1.6rem;
    line-height: 2.5rem;
}

.address-validation .radio-button.is-selected {
    border: 2px #00891B solid;
    border-radius: 5px;
    background-color: unset;
}

.address-validation .radio-button.left-aligned {
    padding-left: 2.5rem;
}

.address-validation .radio-button {
    border: 2px transparent solid;
    border-radius: 5px;
}

.address-validation .radio-button div {
    font-weight: normal;
}

.display-flex {
    display: flex;
}

.align-self-end {
    align-self: flex-end;
}

.word-wrap-break-word {
    word-wrap: break-word;
}

/* MaterialIcons that haven't been added to honeycrisp variables.scss */
.checkbox-icons {
    font-weight: bold;
    width: 3rem;
    height: 2.5rem;
}

label.checkbox p.text--help {
    font-weight: 400;
    padding-top: 1rem;
}

/* CSS styling to remove scroll from number input types */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type=number] {
    -moz-appearance: textfield;
}

/* Branding Phase 2 Link styles */
a:not(.button):not(.reveal__link), .button--link, .button--link:focus, a:not(.button):not(.reveal__link):focus {
    color: #003865;
}

a:not(.button):not(.reveal__link):hover, .button--link:hover, .button--link:active, a:not(.button):not(.reveal__link):active  {
    color: #741078;
}

